edit and update

--- a/templates/task.html
+++ b/templates/task.html
@@ -11,6 +11,7 @@
        <th scope="col">Title</th>
        <th scope="col">Description</th>
        <th scope="col">Status</th>
+       <th scope="col">Actions</th>
      </tr>
    </thead>
    <tbody>
@@ -26,6 +27,11 @@
           <span class = "text-danger">Pending</span>
           {% endif %}
          </td>
+        <td>
+          <a href="{{task.pk}}/" class = "btn btn-success">Mark</button>
+          <a href="{{task.pk}}/edit/" class = "btn btn-success">Edit</button>
+        </td>
+
       </tr>
       {% endfor %}
    </tbody>
