--- a/templates/edit.html
+++ b/templates/edit.html
@@ -11,13 +11,13 @@
       {% csrf_token %}
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Title</label>
-        <input type="text" class="form-control" name = "title" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="text" class="form-control" value= {{tasks.Title}} name = "title" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
       <div class="form-floating mb-3">
          <textarea class="form-control" name="description" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-         <label for="floatingTextarea" name = "description">Description</label>
+         <label for="floatingTextarea" name = "description">{{tasks.Description}}</label>
        </div>
-      <button type="submit" class="btn btn-primary">Create</button>
+      <button type="submit" class="btn btn-primary">Edit</button>
     </form>
 </div>
 {% endblock body %}
